# ig-summarize

./: .gitignore  README.md  SKILL.md  ig-summarize  pyproject.toml
ig_summarize/: __main__.py  app.py  transcribe.py
scripts/: ig_summarize.py
